# skilltree-docs

./: 1q  Cargo.toml  README.md  createfiles  skilltree-docs
.github/workflows/: rust.yml
pages/: 11spindle.md  11twisttobackdropairplane.md  12airplane.md  12or23magyar.md  12twisttobackdrop.md  13magyar.md  13sivado.md  14czech.md  14entrysnapthroughtovaultheight.md  34front.md  README.md  anyscale.md  arabiantucked.md  backdrop.md  backdrop32twisttobackdropcorkscrew.md  backlayoutwith11twist.md  basicbouncing.md  consecutivebackdropsneedle.md  flyawaytucked.md  frontlayoutwith12twistbarani.md  frontsomersaulttucked.md  fronttucktoseatdrop.md  handandkneedrop.md  jump11turn.md  jump21turn.md  jump32turn.md  layoutflyaway.md  layoutflyawaywith12turn.md  pumpswing.md  seatdrop12twisttobackdrop.md  yamashita.md
src/: createfiles.rs  localcurl.rs  sendcurl.rs
