[package]
name = "skilltree-docs"
version = "0.1.0"
authors = ["Davide Radaelli <daviderady@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "createfiles"
path = "src/createfiles.rs"

[[bin]]
name = "sendcurl"
path = "src/sendcurl.rs"

[dependencies]
glob = "0.3"
reqwest = { version = "0.11.3", features = ["blocking"] }
comrak = "0.10.1"
